--- a/Meals/meal-finder.html
+++ b/Meals/meal-finder.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal-Finder</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="practice.css">
+    <link rel="stylesheet" href="meal-finder.css">
 </head>
 <body>
     <main>
@@ -50,6 +50,6 @@
          <section class="h4" id="h4"></section>
         <section id="meal-info"></section>
     </main>
-    <script src="practice.js"></script>
+    <script src="meal-finder.js"></script>
 </body>
 </html>
